--- a/Luis-site/src/sass/nav.scss
+++ b/Luis-site/src/sass/nav.scss
@@ -40,6 +40,7 @@
 
 .nav {
   width: 45%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   transition: 0.4s;
